add hardening based on current dev findings

--- a/aspnet-core/Directory.Build.props
+++ b/aspnet-core/Directory.Build.props
@@ -7,9 +7,10 @@
     <Version />
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)'!='Release'">
+  <PropertyGroup>
     <CodeAnalysisTreatsWarningsAsErrors>true</CodeAnalysisTreatsWarningsAsErrors>
     <MSBuildTreatWarningsAsErrors>true</MSBuildTreatWarningsAsErrors>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
   <ItemGroup>
