--- a/aspnet-core/.editorconfig
+++ b/aspnet-core/.editorconfig
@@ -78,6 +78,7 @@ dotnet_analyzer_diagnostic.severity = warning
 dotnet_diagnostic.IDE0021.severity = suggestion
 dotnet_diagnostic.IDE0022.severity = suggestion
 dotnet_diagnostic.IDE0058.severity = silent
+dotnet_diagnostic.IDE0066.severity = suggestion
 dotnet_diagnostic.IDE0160.severity = none
 dotnet_diagnostic.IDE0161.severity = none
 dotnet_diagnostic.IDE0073.severity = error
