--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
@@ -1,21 +1,37 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "IsEnabled": "true",
-      "SecurityKey": "AbpProjectName_C421AAEE0D114E9C",
-      "Issuer": "AbpProjectName",
-      "Audience": "AbpProjectName"
+    "ConnectionStrings": {
+        "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    },
+    "Authentication": {
+        "JwtBearer": {
+            "IsEnabled": "true",
+            "SecurityKey": "AbpProjectName_C421AAEE0D114E9C",
+            "Issuer": "AbpProjectName",
+            "Audience": "AbpProjectName"
+        }
+    },
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "SharedServicesConfiguration": {
+        "ClientId": "<Add-Client-Id>",
+        "ClientSecret": "<Add-Client-Secret>",
+        "AzureTenant": null
+    },
+    "Notifications": {
+        "EmailConfiguration": {
+            "DefaultFromAddress": "no-reply@meshsystems.com",
+            "DefaultFromDisplayName": "Mesh Systems",
+            "SubscriptionId": "<Add-Subscription-Id>",
+            "Category": "<Add-Category>"
+        },
+        "SmsConfiguration": {
+            "SubscriptionId": "<Add-Subscription-Id>"
+        }
     }
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
 }
