--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Core/AbpCompanyName.AbpProjectName.Core.csproj
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Core/AbpCompanyName.AbpProjectName.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <VersionPrefix>1.0.0.0</VersionPrefix>
@@ -21,6 +21,7 @@
     <PackageReference Include="Abp.AutoMapper" Version="8.2.0" />
     <PackageReference Include="Abp.ZeroCore.EntityFrameworkCore" Version="8.2.0" />
     <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="3.4.0" />
-  </ItemGroup>
+    <PackageReference Include="Mesh.Shared.Notifications" Version="3.2.0-alpha.3" />
+</ItemGroup>
 
 </Project>
