fix up post create and build issues

--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
@@ -11,7 +11,9 @@
         }
     },
     "Logging": {
-        "IncludeScopes": false,
+        "Console": {
+            "IncludeScopes": false
+        },
         "LogLevel": {
             "Default": "Debug",
             "System": "Information",
