Default background worker timer to 5 minutes rather than 5 seconds

--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
@@ -35,5 +35,6 @@
         "SmsConfiguration": {
             "SubscriptionId": "<Add-Subscription-Id>"
         }
-    }
+    },
+    "BackgroundPollingPeriodInSeconds": 300
 }
