--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Host/appsettings.json
@@ -1,28 +1,29 @@
 ﻿{
-  "ConnectionStrings": {
-    "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True; TrustServerCertificate=True;"
-  },
-  "App": {
-    "ServerRootAddress": "https://localhost:44311/",
-    "ClientRootAddress": "http://localhost:4200/",
-    "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
-  },
-  "Authentication": {
-    "JwtBearer": {
-      "IsEnabled": "true",
-      "SecurityKey": "AbpProjectName_C421AAEE0D114E9C",
-      "Issuer": "AbpProjectName",
-      "Audience": "AbpProjectName"
-    }
-  },
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "https://localhost:44311/"
-      }
-    }
-  },
-  "Swagger": {
-    "ShowSummaries": false
-  }
+    "ConnectionStrings": {
+        "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True; TrustServerCertificate=True;"
+    },
+    "App": {
+        "ServerRootAddress": "https://localhost:44311/",
+        "ClientRootAddress": "http://localhost:4200/",
+        "CorsOrigins": "http://localhost:4200,http://localhost:8080,http://localhost:8081,http://localhost:3000"
+    },
+    "Authentication": {
+        "JwtBearer": {
+            "IsEnabled": "true",
+            "SecurityKey": "AbpProjectName_C421AAEE0D114E9C",
+            "Issuer": "AbpProjectName",
+            "Audience": "AbpProjectName"
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "https://localhost:44311/"
+            }
+        }
+    },
+    "Swagger": {
+        "ShowSummaries": false
+    },
+    "BackgroundPollingPeriodInSeconds": 300
 }
