--- a/aspnet-core/pipelines/variables.yml
+++ b/aspnet-core/pipelines/variables.yml
@@ -8,7 +8,7 @@ variables:
   qualifyProjectAffix: true
   Owner: 'ADD_OWNER_NAME'
   repository: 'AbpCompanyName.AbpProjectName.UI'
-  ProjectName: AbpCompanyName.AbpProjectName.Web.Mvc'
+  ProjectName: 'AbpCompanyName.AbpProjectName.Web.Mvc'
   DatabaseProject: 'AbpCompanyName.AbpProjectName.EntityFrameworkCore'
   BuildConfiguration: 'Release'
   projectsToPublish: "**/*/AbpCompanyName.AbpProjectName.Web.Mvc.csproj"
