updated docker and helpers to build and run local container

--- a/aspnet-core/NuGet.config
+++ b/aspnet-core/NuGet.config
@@ -2,7 +2,7 @@
 <configuration>
     <packageSources>
         <clear />
-        <add key="Mesh.One" value="https://meshsystems.pkgs.visualstudio.com/906251ef-583e-4dec-a809-f74c118f3cca/_packaging/Mesh.One/nuget/v3/index.json" />
+        <add key="Mesh.One" value="https://pkgs.dev.azure.com/meshsystems/906251ef-583e-4dec-a809-f74c118f3cca/_packaging/Mesh.One/nuget/v3/index.json" />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     </packageSources>
 </configuration>
