--- a/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
+++ b/aspnet-core/src/AbpCompanyName.AbpProjectName.Web.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "ConnectionStrings": {
-        "Default": "Server=localhost; Database=AbpProjectNameDb; Trusted_Connection=True; TrustServerCertificate=True;"
+        "Default": "Server=localhost; Database=AbpProjectNameDb; User Id=;Password=; TrustServerCertificate=True;"
     },
     "Authentication": {
         "JwtBearer": {
