--- a/aspnet-core/docker/mvc/docker-compose.yml
+++ b/aspnet-core/docker/mvc/docker-compose.yml
@@ -1,3 +1,9 @@
+##############################################################################################
+##
+## Note: See the up.ps1 file for information about the ConnectionStrings__Default variable.
+##
+##############################################################################################
+
 version: '3'
 
 services:
@@ -6,7 +12,7 @@ services:
     image: abp/mvc
     environment:
       ASPNETCORE_ENVIRONMENT: "Staging"
-      ConnectionStrings__Default: "Server=10.0.75.1; Database=AbpProjectNameDb; User=sa; Password=123qwe;TrustServerCertificate=True;"
+    # ConnectionStrings__Default: "${App_DB_ConnStr}"
       TZ: "America/Toronto"
       Kestrel__Endpoints__Http__Url: "http://+:80"
     ports:
