update build pipeline and ef migration tasks to .net 8.x

--- a/aspnet-core/azure-pipelines.yml
+++ b/aspnet-core/azure-pipelines.yml
@@ -25,6 +25,7 @@ stages:
     parameters:
       buildStageName: AbpCompanyName_UI_Service
       executeTests: true
+      dotnetVersion: '8.x'
       publishProjectsToPublish: ${{ variables.projectsToPublish }}
       unitTestProjectsPath: ${{ variables.unitTestProjectsPath }}
       preBuildSteps:
